# pyve-dollar

./: .gitignore  README.md  main.py  pyproject.toml
pyve_dollar/: api.py  bcv.py  common.py  database.py  main.py  paralelo.py  web.py
static/: index.html  main.js  style.css
