[project]
name = "pyve-dollar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "platformdirs>=4.3.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "telethon>=1.38.1",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "types-lxml>=2024.12.13",
]
